# aoc2023-benchmarks

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
aoc_macros/: Cargo.toml
aoc_macros/src/: lib.rs
benches/: aoc_benchmark.rs
src/: days.rs  lib.rs  main.rs
src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs
